# obs-wsc

./: .clang-format  .gitignore  CMakeLists.txt  COPYING  README.md  format.sh
src/: data.c  data.h  misc_types.h  obs_wsc.c  obs_wsc.h  opaque.h  send.c  send.h  util.c  util.h  websocket.c  websocket.h
src/messages/requests/: general.c  general.h  outputs.c  outputs.h  profiles.c  profiles.h  recording.c  recording.h  replay.c  replay.h  scene_items.c  scene_items.h  scenes.c  scenes.h  streaming.c  streaming.h
tests/: wsc_test.c  wsc_tests.c  wsc_tests.h  wsc_unit_tests.c
